Rename the def ? Search and replace it inside the current buffer
yep, a real refactoring tool is still needed

--- a/README.org
+++ b/README.org
@@ -35,6 +35,10 @@ method body.
 
 : M-x red4e-rename-method
 
+It will ask you to search and replace in the current buffer
+
+: TODO: real refactoring accross project
+
 ** Motivation
 
 take the  string =def  foo(first, **kwargs, second=foo):  pass=, where
